[gd_scene load_steps=35 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Player/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Assets/player.png" type="Texture" id=4]
[ext_resource path="res://Player/Moving.gd" type="Script" id=5]
[ext_resource path="res://Player/Idle.gd" type="Script" id=6]
[ext_resource path="res://Player/Falling.gd" type="Script" id=7]
[ext_resource path="res://Player/Jumping.gd" type="Script" id=8]
[ext_resource path="res://Player/Moving_and_Jumping.gd" type="Script" id=9]
[ext_resource path="res://Assets/Boss Fight.ogg" type="AudioStream" id=10]
[ext_resource path="res://Assets/platformerart_pixelredux_2/miguelsgp Itch Dungeon Tileset 64x64/Dark_lvl0.png" type="Texture" id=11]
[ext_resource path="res://Assets/kenney_platformercharacters/PNG/Zombie/Poses/zombie_idle.png" type="Texture" id=12]
[ext_resource path="res://Enemy.gd" type="Script" id=13]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 70 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 32, 70 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 32, 70 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 70 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 70 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 70 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 70 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 70 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 70 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 70 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 224, 70, 32, 70 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 70, 32, 70 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 288, 70, 32, 70 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Moving",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Falling",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 8, 23 )

[sub_resource type="NavigationPolygon" id=16]
vertices = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="OccluderPolygon2D" id=17]
polygon = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=21]
0/name = "icon.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 17 )
0/navigation_offset = Vector2( 0, 0 )
0/navigation = SubResource( 16 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 18 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Dark_lvl0.png 1"
1/texture = ExtResource( 11 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 256, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 19 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Dark_lvl0.png 2"
2/texture = ExtResource( 11 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 576, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Dark_lvl0.png 3"
3/texture = ExtResource( 11 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 256, 192, 64, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Dark_lvl0.png 4"
4/texture = ExtResource( 11 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 128, 160, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Dark_lvl0.png 5"
5/texture = ExtResource( 11 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 576, 128, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 20 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0

[node name="Game" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 200, 200 )
script = ExtResource( 3 )

[node name="Music" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 10 )
autoplay = true

[node name="Countdown" type="Label" parent="Player"]
margin_left = -36.1863
margin_top = -64.0167
margin_right = 40.8137
margin_bottom = -26.0167
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Player"]
process_mode = 0
autostart = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
frames = SubResource( 14 )
animation = "Falling"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 5 )
shape = SubResource( 15 )

[node name="StateMachine" type="Node" parent="Player"]
script = ExtResource( 2 )

[node name="Idle" type="Node" parent="Player/StateMachine"]
script = ExtResource( 6 )

[node name="Moving" type="Node" parent="Player/StateMachine"]
script = ExtResource( 5 )

[node name="Jumping" type="Node" parent="Player/StateMachine"]
script = ExtResource( 8 )

[node name="Moving_and_Jumping" type="Node" parent="Player/StateMachine"]
script = ExtResource( 9 )

[node name="Falling" type="Node" parent="Player/StateMachine"]
script = ExtResource( 7 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_left = 0
limit_right = 3760
limit_bottom = 600

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 21 )
cell_quadrant_size = 5
format = 1
tile_data = PoolIntArray( 0, 0, 0, 58, 0, 0, 65536, 0, 0, 65594, 0, 0, 131072, 0, 0, 131124, 0, 0, 131130, 0, 0, 131134, 1073741825, 0, 196608, 0, 0, 196620, 0, 0, 196621, 0, 0, 196660, 0, 0, 196666, 0, 0, 196670, 1073741825, 0, 262144, 0, 0, 262156, 0, 0, 262157, 0, 0, 262196, 0, 0, 262202, 0, 0, 262206, 1073741825, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327716, 0, 0, 327717, 0, 0, 327732, 0, 0, 327738, 0, 0, 327742, 1073741825, 0, 393216, 0, 0, 393235, 0, 0, 393236, 0, 0, 393260, 0, 0, 393268, 0, 0, 393278, 1073741825, 0, 458752, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458795, 0, 0, 458796, 0, 0, 458797, 0, 0, 458814, 1073741825, 0, 524288, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524317, 0, 0, 524318, 0, 0, 524330, 0, 0, 524331, 0, 0, 524332, 0, 0, 524333, 0, 0, 524334, 0, 0, 524350, 1073741825, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 0, 0, 589864, 0, 0, 589865, 0, 0, 589866, 0, 0, 589867, 0, 0, 589868, 0, 0, 589869, 0, 0, 589870, 0, 0, 589871, 0, 0, 589872, 0, 0, 589873, 0, 0, 589874, 0, 0, 589875, 0, 0, 589876, 0, 0, 589877, 0, 0, 589878, 0, 0, 589879, 0, 0, 589880, 0, 0, 589881, 0, 0, 589882, 0, 0, 589886, 1073741825, 0, 655422, 1073741825, 0, 720958, 1073741825, 0, 786468, 1073741825, 0, 786469, 1073741825, 0, 786486, 1073741825, 0, 786494, 1073741825, 0, 851991, 1073741825, 0, 852021, 1073741825, 0, 852022, 1073741825, 0, 852023, 1073741825, 0, 852030, 1073741825, 0, 917527, 1073741825, 0, 917545, 1073741828, 0, 917546, 1073741828, 0, 917547, 1073741828, 0, 917548, 1073741828, 0, 917549, 1073741828, 0, 917550, 1073741828, 0, 917551, 1073741828, 0, 917552, 1073741828, 0, 917553, 1073741828, 0, 917554, 1073741828, 0, 917555, 1073741828, 0, 917556, 1073741828, 0, 917557, 1073741828, 0, 917558, 1073741828, 0, 917559, 1073741828, 0, 917560, 1073741828, 0, 917561, 1073741828, 0, 917562, 1073741828, 0, 917563, 1073741828, 0, 917564, 1073741828, 0, 917566, 1073741825, 0, 983063, 1073741825, 0, 983067, 1073741828, 0, 983068, 1073741828, 0, 983069, 1073741828, 0, 983070, 1073741828, 0, 983071, 1073741828, 0, 983072, 1073741828, 0, 983073, 1073741828, 0, 983074, 1073741828, 0, 983075, 1073741828, 0, 983076, 1073741828, 0, 983077, 1073741828, 0, 983079, 1073741828, 0, 1048599, 1073741825, 0, 1114135, 1073741825, 0, 1114173, 1073741825, 0, 1179671, 1073741825, 0, 1179694, 1073741825, 0, 1179709, 1073741825, 0, 1245207, 1073741825, 0, 1245229, 1073741825, 0, 1245230, 1073741825, 0, 1245231, 1073741825, 0, 1245245, 1073741825, 0, 1310743, 1073741825, 0, 1310762, 1073741825, 0, 1310763, 1073741825, 0, 1310764, 1073741825, 0, 1310765, 1073741825, 0, 1310766, 1073741825, 0, 1310767, 1073741825, 0, 1310768, 1073741825, 0, 1310769, 1073741825, 0, 1310770, 1073741825, 0, 1310771, 1073741825, 0, 1310772, 1073741825, 0, 1310781, 1073741825, 0, 1376279, 1073741825, 0, 1376293, 1073741825, 0, 1376294, 1073741825, 0, 1376295, 1073741825, 0, 1376296, 1073741825, 0, 1376297, 1073741825, 0, 1376298, 1073741825, 0, 1376317, 1073741825, 0, 1441815, 1073741825, 0, 1441816, 1073741825, 0, 1441817, 1073741825, 0, 1441818, 1073741825, 0, 1441819, 1073741825, 0, 1441820, 1073741825, 0, 1441821, 1073741825, 0, 1441822, 1073741825, 0, 1441823, 1073741825, 0, 1441824, 1073741825, 0, 1441825, 1073741825, 0, 1441826, 1073741825, 0, 1441827, 1073741825, 0, 1441853, 1073741825, 0, 1507388, 1073741825, 0, 1572899, 1073741825, 0, 1572900, 1073741825, 0, 1572901, 1073741825, 0, 1572902, 1073741825, 0, 1572903, 1073741825, 0, 1572904, 1073741825, 0, 1572905, 1073741825, 0, 1572906, 1073741825, 0, 1572907, 1073741825, 0, 1572908, 1073741825, 0, 1572909, 1073741825, 0, 1572910, 1073741825, 0, 1572911, 1073741825, 0, 1572912, 1073741825, 0, 1572913, 1073741825, 0, 1572914, 1073741825, 0, 1572915, 1073741825, 0, 1572916, 1073741825, 0, 1572917, 1073741825, 0, 1572918, 1073741825, 0, 1572919, 1073741825, 0, 1572920, 1073741825, 0, 1572921, 1073741825, 0, 1572922, 1073741825, 0, 1572923, 1073741825, 0, 1572924, 1073741825, 0 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy" type="Area2D" parent="Enemies"]
script = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="Enemies/Enemy"]
position = Vector2( 2519.36, 526.009 )
scale = Vector2( -0.818747, 0.95 )
texture = ExtResource( 12 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enemies/Enemy"]
polygon = PoolVector2Array( 2499.03, 506.967, 2534.38, 499.896, 2544.28, 563.536, 2535.09, 576.971, 2499.73, 576.263, 2493.37, 560.707, 2501.15, 535.251 )

[node name="Tween" type="Tween" parent="Enemies/Enemy"]

[node name="Enemy2" type="Area2D" parent="Enemies"]

[node name="Sprite" type="Sprite" parent="Enemies/Enemy2"]
position = Vector2( 1872.1, 907.94 )
scale = Vector2( 0.955806, 1 )
texture = ExtResource( 12 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enemies/Enemy2"]
polygon = PoolVector2Array( 1849.9, 880.292, 1901.1, 881.296, 1896.08, 916.436, 1902.11, 950.572, 1894.08, 960.612, 1849.4, 960.11, 1840.86, 944.548, 1847.89, 918.946, 1852.41, 896.858 )

[node name="Tween" type="Tween" parent="Enemies/Enemy2"]

[connection signal="finished" from="Player/Music" to="Player" method="_on_AudioStreamPlayer_finished"]
[connection signal="timeout" from="Player/Timer" to="Player" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Enemies/Enemy" to="Player" method="_on_Enemy_body_entered"]
